--- a/microservicecloud-provider-dept-8003/src/main/resources/application.yml
+++ b/microservicecloud-provider-dept-8003/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver                # mysql驱动包
-    url: jdbc:mysql://localhost:3306/cloudDB03           # 数据库名称
+    url: jdbc:mysql://localhost:3306/cloudDB03?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8            # 数据库名称
     username: root
     password: 123456
     dbcp2:
