--- a/pom.xml
+++ b/pom.xml
@@ -1,142 +1,138 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.llb.springcloud</groupId>
-	<artifactId>microservicecloud</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target><!--编译时jdk版本 -->
-		<junit.version>4.12</junit.version>
-		<log4j.version>1.2.17</log4j.version>
-		<lombok.version>1.16.18</lombok.version>
-		<springloaded.version>1.2.8.RELEASE</springloaded.version>
-	</properties>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.llb.springcloud</groupId>
+    <artifactId>microservicecloud</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target><!--编译时jdk版本 -->
+        <junit.version>4.12</junit.version>
+        <log4j.version>1.2.17</log4j.version>
+        <lombok.version>1.16.18</lombok.version>
+        <springloaded.version>1.2.8.RELEASE</springloaded.version>
+    </properties>
 
-	<dependencyManagement><!--父工程引导依赖注解 -->
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Greenwich.SR3</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.1.8.RELEASE</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
-				<version>8.0.11</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-starter-eureka</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>druid</artifactId>
-				<version>1.0.31</version>
-			</dependency>
+    <dependencyManagement><!--父工程引导依赖注解 -->
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Greenwich.SR3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.1.8.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.11</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-eureka</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>1.0.31</version>
+            </dependency>
 
-			<dependency>
-				<groupId>org.mybatis.spring.boot</groupId>
-				<artifactId>mybatis-spring-boot-starter</artifactId>
-				<version>1.3.2</version>
-			</dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>1.3.2</version>
+            </dependency>
 
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-core</artifactId>
-				<version>1.2.3</version>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version><!-- 版本写活 -->
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>${log4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>springloaded</artifactId>
-				<version>${springloaded.version}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>1.2.3</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version><!-- 版本写活 -->
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>springloaded</artifactId>
+                <version>${springloaded.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<build>
-		<finalName>microservicecloud</finalName>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<configuration>
-					<delimiters>
-						<delimit>$</delimit>
-					</delimiters>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build><!-- 添加微服务详细页面配置 微服务info信息 -->
+    <build>
+        <finalName>microservicecloud</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <delimiters>
+                        <delimit>$</delimit>
+                    </delimiters>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build><!-- 添加微服务详细页面配置 微服务info信息 -->
 
 
-	<modules>
-		<module>microservice-api</module>
-		<module>microservicecloud-provider-dept-8001</module>
-		<module>microservicecloud-consumer-dept-80</module>
-		<module>microservicecloud-eureka-7001</module>
-		<module>microservicecloud-eureka-7002</module>
-		<module>microservicecloud-eureka-7003</module>
-		<module>microservicecloud-provider-dept-8002</module>
-		<module>microservicecloud-provider-dept-8003</module>
-		<module>microservicecloud-consumer-dept-feign</module>
-		<module>microservicecloud-provider-dept-hystrix-8001</module>
-		<module>
-			microservicecloud-consumer-hystrix-dashboard-9001
-		</module>
-		<module>microservicecloud-zuul-gateway-9527</module>
-		<module>microservice-config-3344</module>
-		<module>microservice-config-client-3355</module>
-		<module>micservicecloud-config-eureka-client-7001</module>
-		<module>microservicecloud-config-dept-client-8001</module>
-		<module>microservicecloud-config-cluster-3341</module>
-		<module>microservicecloud-config-client-3351</module>
-		<module>microservicecloud-eureka-7004</module>
-		<module>microservicecloud-config-cluster-3342</module>
-		<module>microservicecloud-config-client-3352</module>
-		<module>microservicecloud-cloud-gateway-9528</module>
-		<module>microservicecloud-provider-dept-hystrix-8002</module>
-		<module>
-			microservicecloud-provider-dept-hystrix-turbine-8003
-		</module>
-		<module>microservicecloud-cloud-gateway-client-9529</module>
-		<module>microservicecloud-mq-provider-8201</module>
-		<module>microservicecloud-mq-consumer-8301</module>
-		<module>microservice-Sleuth-zipkin-2001</module>
-		<module>microservicecloud-admin-client-6001</module>
-		<module>microservicecloud-admin-server-6002</module>
-		<module>microservicecloud-auth</module>
-		<module>microservicecloud-auth-login</module>
-		<module>microservicecloud-auth-security-test</module>
-	</modules>
+    <modules>
+        <module>microservicecloud-api</module>
+        <module>microservicecloud-provider-dept-8001</module>
+        <module>microservicecloud-consumer-dept-80</module>
+        <module>microservicecloud-eureka-7001</module>
+        <module>microservicecloud-eureka-7002</module>
+        <module>microservicecloud-eureka-7003</module>
+        <module>microservicecloud-provider-dept-8002</module>
+        <module>microservicecloud-provider-dept-8003</module>
+        <module>microservicecloud-consumer-dept-feign</module>
+        <module>microservicecloud-provider-dept-hystrix-8001</module>
+        <module>microservicecloud-consumer-hystrix-dashboard-9001</module>
+        <module>microservicecloud-zuul-gateway-9527</module>
+        <module>microservicecloud-config-3344</module>
+        <module>microservicecloud-config-client-3355</module>
+        <module>microservicecloud-config-eureka-client-7001</module>
+        <module>microservicecloud-config-dept-client-8001</module>
+        <module>microservicecloud-config-cluster-3341</module>
+        <module>microservicecloud-config-client-3351</module>
+        <module>microservicecloud-eureka-7004</module>
+        <module>microservicecloud-config-cluster-3342</module>
+        <module>microservicecloud-config-client-3352</module>
+        <module>microservicecloud-cloud-gateway-9528</module>
+        <module>microservicecloud-provider-dept-hystrix-8002</module>
+        <module>microservicecloud-provider-dept-hystrix-turbine-8006</module>
+        <module>microservicecloud-cloud-gateway-client-9529</module>
+        <module>microservicecloud-mq-provider-8201</module>
+        <module>microservicecloud-mq-consumer-8301</module>
+        <module>microservicecloud-Sleuth-zipkin-2001</module>
+        <module>microservicecloud-admin-client-6001</module>
+        <module>microservicecloud-admin-server-6002</module>
+        <module>microservicecloud-auth</module>
+        <module>microservicecloud-auth-login</module>
+        <module>microservicecloud-auth-security-test</module>
+    </modules>
 </project>
 
